--- a/.github/workflows/target-call.yml
+++ b/.github/workflows/target-call.yml
@@ -19,8 +19,6 @@ jobs:
         id: changed_files
         uses: tj-actions/changed-files@v45
 
-      # - name: List all changed files
-      #   env:
-      #     ALL_CHANGED_FILES: ${{ steps.changed-files.outputs.all_changed_files }}
-      #   run: |
-      #     echo "All changed files: $ALL_CHANGED_FILES"
+      - name: List all changed files
+        run: |
+          echo "All changed files: ${{ steps.changed_files.outputs.all_modified_files }}"
