--- a/.github/workflows/target-call.yml
+++ b/.github/workflows/target-call.yml
@@ -18,6 +18,8 @@ jobs:
       - name: Determine changed files
         id: changed_files
         uses: tj-actions/changed-files@v45
+        with:
+          separator: ","
 
       - name: List all changed files
         run: |
