--- a/.github/workflows/target-call.yml
+++ b/.github/workflows/target-call.yml
@@ -17,7 +17,6 @@ jobs:
       opco_matrix: ${{ steps.opco.outputs.opco_matrix }}
     steps:
       - uses: actions/checkout@v4
-
       - name: Opco change
         id: opco
         uses: ./.github/actions/opco
@@ -30,6 +29,7 @@ jobs:
       matrix:
         opco: ${{ fromJson(needs.detect_changes.outputs.opco_matrix) }}
     steps:
+      - uses: actions/checkout@v4
       - name: Printing
         shell: bash
         run: |
@@ -37,15 +37,10 @@ jobs:
       
       - name: Deploying target components
         id: target-comp
-        uses: ./.github/actions/target-comp
+        uses: ./.github/actions/target
         with:
           opcopath: ${{ matrix.opco }}
       
-      # - name: printing
-      #   run: |
-      #     echo "changed files for opco ${{ matrix.opco }} are ${{ steps.target_comp.outputs.component_matrix }}"
-
-
-        
-
-        
+      - name: printing
+        run: |
+          echo "changed files for opco ${{ matrix.opco }} are ${{ steps.target_comp.outputs.component_matrix }}"
