--- a/.github/workflows/target-call.yml
+++ b/.github/workflows/target-call.yml
@@ -1,8 +1,10 @@
-name: Target Mad Components
+name: Target Mad Components for ALH
 on:
   pull_request:
     branches:
       - main
+    paths:
+      - 'alh/**'
 
 permissions:
   id-token: write
@@ -10,50 +12,55 @@ permissions:
   pull-requests: write
 
 jobs:
-  detect_changes:
-    name: Determine solution to deploy
-    runs-on: ubuntu-latest
-    outputs:
-      opco_matrix: ${{ steps.opco.outputs.opco_matrix }}
-    steps:
-      - uses: actions/checkout@v4
-      - name: Opco change
-        id: opco
-        uses: ./.github/actions/opco
+  # detect_changes:
+  #   name: Determine solution to deploy
+  #   runs-on: ubuntu-latest
+  #   outputs:
+  #     opco_matrix: ${{ steps.opco.outputs.opco_matrix }}
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - name: Opco change
+  #       id: opco
+  #       uses: ./.github/actions/opco
 
-  deploy-opco:
-    needs: detect_changes
-    name: Deploying ${{ matrix.opco }}
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        opco: ${{ fromJson(needs.detect_changes.outputs.opco_matrix) }}
-    steps:
-      - uses: actions/checkout@v4
-      - name: Printing
-        shell: bash
-        run: |
-          echo "Running job for OPCO: ${{ matrix.opco }}"
+  # deploy-opco:
+  #   needs: detect_changes
+  #   name: Deploying ${{ matrix.opco }}
+  #   runs-on: ubuntu-latest
+  #   strategy:
+  #     matrix:
+  #       opco: ${{ fromJson(needs.detect_changes.outputs.opco_matrix) }}
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - name: Printing
+  #       shell: bash
+  #       run: |
+  #         echo "Running job for OPCO: ${{ matrix.opco }}"
       
-      # - name: Deploying target components
-      #   id: target-comp
-      #   uses: ./.github/actions/target
-      #   with:
-      #     opcopath: ${{ matrix.opco }}
+  #     # - name: Deploying target components
+  #     #   id: target-comp
+  #     #   uses: ./.github/actions/target
+  #     #   with:
+  #     #     opcopath: ${{ matrix.opco }}
 
   deploy-component:
-    needs: detect_changes
-    name: Deploying ${{ matrix.opco }}-${{ matrix.component }}
+    name: Plan for ${{ matrix.component }}
     runs-on: ubuntu-latest
+    env:
+      OP_CO: alh
     strategy:
       matrix:
-        opco: ${{ fromJson(needs.detect_changes.outputs.opco_matrix) }}
-        component: ["central-comp", "databricks", "firewall"]
+        component: ["central-comp", "databricks"]
     steps:
       - uses: actions/checkout@v4
+      - name: Deploying target components
+        id: target-comp
+        uses: ./.github/actions/target
+        with:
+          opcopath: ${{ env.OP_CO }}
       - name: Printing
         shell: bash
         run: |
-          echo "Running job for ${{ matrix.opco }} & component: ${{ matrix.component }}"
+          echo "Running job for ${{ env.OP_CO }} & component: ${{ matrix.component }}"
       
       
