--- a/.github/actions/merge-config/action.yml
+++ b/.github/actions/merge-config/action.yml
@@ -10,12 +10,16 @@ inputs:
     environment:
       description: Deployment environment (nonprd/preprd/prd)
       required: true
-
+outputs:
+  config_path:
+    description: "The path to the merged config"
+    value:  ${{ steps.config.outputs.config_path }}
 runs:
   using: "composite"
   steps:
      - uses: actions/checkout@v4
      - name: Merge config
+       id: config
        shell: bash
        run: |
          yq eval-all 'select(fileIndex == 0) * select(fileIndex == 1)' ${{ inputs.source }} ${{ inputs.target }} > final_config.yaml
