--- a/.github/workflows/target-call.yml
+++ b/.github/workflows/target-call.yml
@@ -76,10 +76,11 @@ jobs:
           source: ./${{ env.OP_CO }}/${{ matrix.component }}/${{ matrix.environment }}-config.yaml
           target: ./${{ env.OP_CO }}/${{ matrix.component }}/project-config.yaml
 
-      - name: Printing
+      - name: Printing config
         shell: bash
         run: |
           echo "Running job for ${{ env.OP_CO }}-${{ matrix.environment }}-{{ matrix.component }}"
           echo "config_path=${{ steps.config.outputs.config_path }}"
+          cat ${{ steps.config.outputs.config_path }}
       
       
