--- a/.github/workflows/mad-alh.yml
+++ b/.github/workflows/mad-alh.yml
@@ -39,45 +39,40 @@ jobs:
         component: ${{ fromJson(needs.detect-components.outputs.component_matrix) }}
     steps:
       - uses: actions/checkout@v4
+      - name: merge config
+        id: config
+        uses: ./.github/actions/merge-config
+        with:
+          source: ./${{ env.OP_CO }}/${{ matrix.component }}/${{ matrix.environment }}-config.yaml
+          target: ./${{ env.OP_CO }}/${{ matrix.component }}/project-config.yaml
+
+      - name: Output config
+        shell: bash
+        id: tfconfig 
+        run: |
+          ls -l
+          echo "Running job for ${{ env.OP_CO }}-${{ matrix.environment }}-${{ matrix.component }}"
+          echo "deploy_config=${{ steps.config.outputs.config_path }}" >> $GITHUB_OUTPUT
+          echo "backends_config=${{ env.OP_CO }}/backends/${{ matrix.environment }}.tfbackend" >> $GITHUB_OUTPUT
+      
+      - name: print output
+        shell: bash
+        run: |
+           echo "Printing all configs"
+           echo "${{ steps.tfconfig.outputs.deploy_config }}"
+           echo "${{ steps.tfconfig.outputs.backends_config }}"
+      
       - uses: actions/checkout@v4
         name: mad-core checkout
         with:
          repository: vickydevopsorg/mad-core
          ref: main
-         path: mad-core
-      - name: check dir
-        shell: bash
-        run: |
-          cd  mad-core
-          ls -l
-      # - name: merge config
-      #   id: config
-      #   uses: ./.github/actions/merge-config
-      #   with:
-      #     source: ./${{ env.OP_CO }}/${{ matrix.component }}/${{ matrix.environment }}-config.yaml
-      #     target: ./${{ env.OP_CO }}/${{ matrix.component }}/project-config.yaml
 
-      # - name: Output config
-      #   shell: bash
-      #   id: tfconfig 
-      #   run: |
-      #     ls -l
-      #     echo "Running job for ${{ env.OP_CO }}-${{ matrix.environment }}-${{ matrix.component }}"
-      #     echo "deploy_config=${{ steps.config.outputs.config_path }}" >> $GITHUB_OUTPUT
-      #     echo "backends_config=${{ env.OP_CO }}/backends/${{ matrix.environment }}.tfbackend" >> $GITHUB_OUTPUT
-      
-      # - name: print output
-      #   shell: bash
-      #   run: |
-      #      echo "Printing all configs"
-      #      echo "${{ steps.tfconfig.outputs.deploy_config }}"
-      #      echo "${{ steps.tfconfig.outputs.backends_config }}"
-
-      # - uses: vickydevopsorg/mad-core/.github/actions/terraform@main
-      #   with:
-      #     environment: ${{ matrix.environment }}
-      #     deployment_target: ${{ matrix.component }}
-      #     backends_config: ${{ env.OP_CO }}/backends/${{ matrix.environment }}.tfbackend
-      #     deploy_config: ${{ env.OP_CO }}/${{ matrix.component }}/config.yaml
+      - uses: vickydevopsorg/mad-core/.github/actions/terraform@main
+        with:
+          environment: ${{ matrix.environment }}
+          deployment_target: ${{ matrix.component }}
+          backends_config: ${{ env.OP_CO }}/backends/${{ matrix.environment }}.tfbackend
+          deploy_config: ${{ env.OP_CO }}/${{ matrix.component }}/config.yaml
       
       
